--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copiermaster C&G Soluciones Digitales S.A.</title>
 
+    <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp">
+<link rel="apple-touch-icon"
+      href="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp">
+<meta name="theme-color" content="#84cc16">
+
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
